--- a/ssh-port-change.yaml
+++ b/ssh-port-change.yaml
@@ -1,6 +1,6 @@
 ---
 - name: ssh-port changing
-  hosts: 
+  hosts: all
   #gather_facts: no
   remote_user: root
   tasks:
@@ -32,7 +32,7 @@
       wait_for:
         port: 22 
         state: "started"
-        host: "{{ inventory_hostname }}"
+        #host: "{{ inventory_hostname }}"
         connect_timeout: 5
         timeout: 5
       #delegate_to: "localhost"
@@ -43,7 +43,7 @@
       wait_for:
         port: 22
         state: "started"
-        host: "{{ inventory_hostname }}" 
+        #host: "{{ inventory_hostname }}" 
         connect_timeout: 5
         timeout: 5
       #delegate_to: 
