--- a/ssh-port22-change.yaml
+++ b/ssh-port22-change.yaml
@@ -22,3 +22,19 @@
     service:
       name: sshd
       state: restarted
+
+  - name: install firewalld
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+    package:
+      name: firewalld
+      state: latest
+
+  - name: start firewall
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+    systemd:
+      name: firewalld
+      state: started
+
+  - name: Open port 8875
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+    command: "firewall-cmd --zone=public --add-port=8875/tcp --permanent"
